--- a/css/myStyleSheet.css
+++ b/css/myStyleSheet.css
@@ -18,4 +18,13 @@ font-family: HelveticaNeue;
     background-color:#18b86e;
 }
 
- <script>$( document ).ready(function)(){$(".dropdown-button").dropdown();})</script>
+ body {
+     display: flex;
+     min-height: 100vh;
+     flex-direction: column;
+ }
+ main {
+     flex: 1 0 auto;
+ }
+
+ /*<script>$( document ).ready(function)(){$(".dropdown-button").dropdown();})</script>*/ 
