--- a/css/myStyleSheet.css
+++ b/css/myStyleSheet.css
@@ -27,4 +27,32 @@ font-family: HelveticaNeue;
      flex: 1 0 auto;
  }
 
+ /* label color */
+   .input-field label {
+     color: #18b86e;
+   }
+   /* label focus color */
+   .input-field input[type=text]:focus + label {
+     color: #18b86e;
+   }
+   /* label underline focus color */
+   .input-field input[type=text]:focus {
+     border-bottom: 1px solid #18b86e;
+     box-shadow: 0 1px 0 0 #18b86e;
+   }
+   /* valid color */
+   .input-field input[type=text].valid {
+     border-bottom: 1px solid #18b86e;
+     box-shadow: 0 1px 0 0 #18b86e;
+   }
+   /* invalid color */
+   .input-field input[type=text].invalid {
+     border-bottom: 1px solid #18b86e;
+     box-shadow: 0 1px 0 0 #18b86e;
+   }
+   /* icon prefix focus color */
+   .input-field .prefix.active {
+     color: #18b86e;
+   }
+
  /*<script>$( document ).ready(function)(){$(".dropdown-button").dropdown();})</script>*/ 
