--- a/css/myStyleSheet.css
+++ b/css/myStyleSheet.css
@@ -59,7 +59,7 @@ font-family: 'Varela Round', sans-serif;
     color:#18b86e 
 }
 .collapsible-body{
-     color:#18b86e 
+     color:grey
 }
 
 .fa {
